<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsApartmentActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="20sp"
                android:orientation="vertical">

                <com.synnapps.carouselview.CarouselView
                    android:id="@+id/caroselView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"
                    app:autoPlay="true"
                    app:fillColor="@color/colorGreen"
                    app:pageColor="@color/colorWhite"
                    app:radius="6dp"
                    app:slideInterval="3000"
                    app:strokeColor="@color/colorGray"
                    app:strokeWidth="1dp" />


                <LinearLayout
                    android:layout_width="391dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorBlack" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreen"
                    android:text="@string/address"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_outline"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/street"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textStreet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:layout_marginRight="3dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:layout_marginRight="3dp"
                            android:text="@string/number"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_marginRight="6dp"
                            android:text="@string/district"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textDistrict"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:layout_marginRight="3dp"
                            android:text="@string/city"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:layout_marginRight="3dp"
                            android:text="@string/state"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textState"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreen"
                    android:text="@string/owner"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_outline"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/name"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textOwner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreen"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_outline"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:gravity="center|bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonVisit"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal|center"
                        android:background="@color/colorGreen"
                        android:text="@string/checkVisit"
                        android:textColor="@color/colorBlack"

                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>