<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_de_fundo_login"
    tools:context=".activity.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </RelativeLayout>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignEnd="@+id/login"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="85dp"
        android:background="@drawable/logo" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="205dp"
        android:background="@drawable/fundo_caixa_texto"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/senhaText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="236dp"
        android:background="@drawable/fundo_caixa_texto"
        android:ems="10"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/naoCadastrado"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-83dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/fundo_btn_login"
        android:text="LOGIN" />

    <TextView
        android:id="@+id/naoCadastrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="79dp"
        android:textColor="@android:color/black"
        android:text="@string/criar_conta" />

</RelativeLayout>